--- a/admin/app/views/layouts/workarea/admin/application.html.haml
+++ b/admin/app/views/layouts/workarea/admin/application.html.haml
@@ -73,6 +73,7 @@
                 %li.menu__item= link_to t('workarea.admin.layout.your_account_on_the_storefront'), storefront.users_account_path, class: 'menu__link'
                 %li.menu__item= link_to t('workarea.admin.layout.browse_storefront_as_guest'), guest_browsing_path, class: 'menu__link', data: { method: :post }
                 %li.menu__item= link_to t('workarea.admin.layout.edit_the_home_page'), edit_content_path(current_system_page_content_for(:home_page)), class: 'menu__link'
+                %li.menu__item= link_to t('workarea.admin.layout.edit_the_footer'), edit_content_path(current_system_page_content_for(:layout), area_id: 'footer_navigation'), class: 'menu__link'
                 %li.menu__item.menu__item--heading
                   %span.menu__heading= t('workarea.admin.layout.most_visited')
                 - if most_visited.blank?
