--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -36,7 +36,7 @@
       <span class='fancy-box__heading'>Architecture</span>
       <ul href='#' class='fancy-box__links'>
         <li><%= link_to 'Extension', '/articles/extension-overview.html', class: 'fancy-box__link' %></li>
-        <li><%= link_to 'Testing', '/articles/testing.html', class: 'fancy-box__link' %></li>
+        <li><%= link_to 'Testing Concepts', '/articles/testing-concepts.html', class: 'fancy-box__link' %></li>
         <li><%= link_to 'Products', '/articles/products.html', class: 'fancy-box__link' %></li>
         <li><%= link_to 'Orders', '/articles/orders.html', class: 'fancy-box__link' %></li>
         <li><%= link_to 'Style Guides', '/articles/style-guides.html', class: 'fancy-box__link' %></li>
