--- a/admin/app/views/workarea/admin/content_assets/insert.html.haml
+++ b/admin/app/views/workarea/admin/content_assets/insert.html.haml
@@ -37,10 +37,11 @@
 
       = render 'workarea/admin/facets/applied', search: @search, reset_path: content_assets_path
 
-    - if @search.results.any?
-      .grid.grid--auto.grid--flush.grid--center
-        - @search.results.each do |result|
-          .grid__cell= render_summary_for(result)
+    .section
+      - if @search.results.any?
+        .grid.grid--auto.grid--flush.grid--center
+          - @search.results.each do |result|
+            .grid__cell= render_summary_for(result)
 
-      - if @search.results.total_pages > 1
-        = render 'workarea/admin/shared/pagination', collection: @search.results
+        - if @search.results.total_pages > 1
+          = render 'workarea/admin/shared/pagination', collection: @search.results
