Allow images to be lazy loaded
WORKAREA-194

--- a/storefront/app/assets/javascripts/workarea/storefront/application.js.erb
+++ b/storefront/app/assets/javascripts/workarea/storefront/application.js.erb
@@ -135,6 +135,7 @@
     workarea/storefront/modules/option_buttons
     workarea/storefront/modules/optional_fields
     workarea/storefront/modules/traffic_referrer
+    workarea/storefront/modules/lazy_images
   ).each do |asset|
     require_asset asset
   end
