--- a/admin/app/views/workarea/admin/pricing_skus/index.html.haml
+++ b/admin/app/views/workarea/admin/pricing_skus/index.html.haml
@@ -47,8 +47,7 @@
                 = label_tag 'select_all', t('workarea.admin.bulk_actions.select_all'), class: 'checkbox__label'
             %th= t('workarea.admin.fields.sku')
             %th.align-right= t('workarea.admin.fields.msrp')
-            %th.align-right= t('workarea.admin.fields.regular')
-            %th.align-right= t('workarea.admin.fields.sale_price')
+            %th.align-right= t('workarea.admin.fields.sell_price')
             %th.align-center= t('workarea.admin.fields.on_sale')
             %th.align-center= t('workarea.admin.fields.allow_discounting')
             %th= t('workarea.admin.fields.updated_at')
@@ -63,8 +62,7 @@
                 = link_to result.id, pricing_sku_path(result)
                 = upcoming_changesets_icon_for(result)
               %td.align-right= number_to_currency result.msrp
-              %td.align-right= number_to_currency result.regular_price
-              %td.align-right= number_to_currency result.sale_price
+              %td.align-right= result.sell_price
               %td.align-center= t("workarea.admin.#{result.on_sale?}")
               %td.align-center= t("workarea.admin.#{result.discountable?}")
               %td= local_time_ago(result.updated_at)
