Return a link to a github page when plugin match is found in docs search. (#379)
No changelog

WORKAREA-179

--- a/docs/source/search.html.erb
+++ b/docs/source/search.html.erb
@@ -29,6 +29,7 @@ body_class: body--flat
 <div class='hide-if-noscript'>
   <div class='search-results'>
     <p class='search-results__count'>No results to show</p>
+    <p class='search-results__plugins'>Looks like you might be searching for a plugin.</p>
     <p class='search-results__help'>
       <strong>Can't find what you're looking for?</strong>
       <br>
