--- a/admin/app/views/workarea/admin/pricing_skus/index.html.haml
+++ b/admin/app/views/workarea/admin/pricing_skus/index.html.haml
@@ -46,6 +46,7 @@
                 = check_box_tag 'select_all', nil, false, id: 'select_all', class: 'checkbox__input', data: { bulk_action_select_all: '' }
                 = label_tag 'select_all', t('workarea.admin.bulk_actions.select_all'), class: 'checkbox__label'
             %th= t('workarea.admin.fields.sku')
+            = append_partials('admin.pricing_skus_additional_field_labels')
             %th.align-right= t('workarea.admin.fields.msrp')
             %th.align-right= t('workarea.admin.fields.sell_price')
             %th.align-center= t('workarea.admin.fields.on_sale')
@@ -61,6 +62,7 @@
               %td
                 = link_to result.id, pricing_sku_path(result)
                 = upcoming_changesets_icon_for(result)
+              = append_partials('admin.pricing_skus_additional_fields', result: result)
               %td.align-right= number_to_currency result.msrp
               %td.align-right= result.sell_price
               %td.align-center= t("workarea.admin.#{result.on_sale?}")
