Remove unneeded grid modifier
Causes misalignment of the users index aux navigation append point.

--- a/admin/app/views/workarea/admin/users/index.html.haml
+++ b/admin/app/views/workarea/admin/users/index.html.haml
@@ -2,7 +2,7 @@
 
 .view
   .view__header
-    .grid.grid--middle.grid--right
+    .grid.grid--right
       .grid__cell.grid__cell--50
         .view__heading
           = link_to "↑ #{t('workarea.admin.users.index.dashboard_link')}", people_dashboards_path, class: 'view__dashboard-button'
