Add missing append points to option-based product templates
This append point was only in the generic template, but is useful for
plugins.

--- a/storefront/app/views/workarea/storefront/products/templates/_option_selects.html.haml
+++ b/storefront/app/views/workarea/storefront/products/templates/_option_selects.html.haml
@@ -10,6 +10,8 @@
     .product-prices.product-prices--details{ itemprop: 'offers', itemscope: true, itemtype: 'http://schema.org/Offer' }
       = render 'workarea/storefront/products/pricing', product: product
 
+    = append_partials('storefront.product_pricing_details', product: product)
+
     - if product.description.present?
       .product-details__description
         %p= truncated_product_description(product, t('workarea.storefront.products.read_more'))
