--- a/admin/app/assets/javascripts/workarea/admin/templates/content_block_iframe.jst.ejs
+++ b/admin/app/assets/javascripts/workarea/admin/templates/content_block_iframe.jst.ejs
@@ -1,2 +1,2 @@
-<iframe class="content-block__iframe" src="<%= src %>" scrolling="no"></iframe>
+<iframe name="content-blocks" class="content-block__iframe" src="<%= src %>" scrolling="no"></iframe>
 <div class="content-block__overlay"></div>
